--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
       matrix:
         include:
           # 请根据你的实际 board/shield 名称填写
-          - board: nice_nano_v2
+          - board: nice_nano
             shield: cygnus_left
-          - board: nice_nano_v2
+          - board: nice_nano
             shield: cygnus_right
     steps:
       - name: Checkout
