改回最原始

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,69 +1,5 @@
-name: Build
-
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container:
-      image: zmkfirmware/zmk-build-arm:stable
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          # 请根据你的实际 board/shield 名称填写
-          - board: nice_nano
-            shield: cygnus_left
-          - board: nice_nano
-            shield: cygnus_right
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Cache west modules
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-zephyr-modules
-        with:
-          path: |
-            modules/
-            tools/
-            zephyr/
-            bootloader/
-            zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - name: West Init
-        run: west init -l config
-
-      - name: West Update
-        run: west update
-
-      - name: West Zephyr export
-        run: west zephyr-export
-
-      - name: Build (${{ matrix.shield }} - ${{ matrix.board }})
-        run: |
-          west build -s zmk/app -b ${{ matrix.board }} -- -DZMK_CONFIG=${GITHUB_WORKSPACE}/config -DSHIELD=${{ matrix.shield }}
-
-      - name: Show Kconfig
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-
-      - name: Rename artifacts
-        run: |
-          mkdir -p build/artifacts
-          if [ -f build/zephyr/zmk.uf2 ]; then
-            cp build/zephyr/zmk.uf2 "build/artifacts/${{ matrix.shield }}-${{ matrix.board }}-zmk.uf2"
-          elif [ -f build/zephyr/zmk.hex ]; then
-            cp build/zephyr/zmk.hex "build/artifacts/${{ matrix.shield }}-${{ matrix.board }}-zmk.hex"
-          fi
-
-      - name: Upload firmware
-        uses: actions/upload-artifact@v4
-        with:
-          name: firmware
-          path: build/artifacts
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
