--- a/build.yaml
+++ b/build.yaml
@@ -17,14 +17,14 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
-include:
-  - board: nice_nano_v2
-    shield: cygnus_left
-  - board: nice_nano_v2
-    shield: cygnus_right
-
 # include:
-#   - board: nice_nano
+#   - board: nice_nano_v2
 #     shield: cygnus_left
-#   - board: nice_nano
+#   - board: nice_nano_v2
 #     shield: cygnus_right
+
+include:
+  - board: nice_nano
+    shield: cygnus_left
+  - board: nice_nano
+    shield: cygnus_right
